--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @-webkit-keyframes cardenter {
   0% {
-    transform: rotatey(180deg);
+    transform: rotatey(0deg);
     transform-style: preserve-3d;
     -webkit-transform: rotatey(0deg);
     -webkit-transform-style: preserve-3d; }
@@ -69,7 +69,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
-  /* line 138, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 141, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front, .card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -82,39 +82,33 @@ body {
     -webkit-display: flex;
     align-content: space-around;
     justify-content: center; }
-  /* line 149, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 152, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front {
     transform: rotatey(-180deg);
     -webkit-transform: rotatey(-180deg);
     -moz-transform: rotatey(-180deg);
     -ms-transform: rotatey(-180deg);
     -o-transform: rotatey(-180deg);
-    transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -o-transition: 0.5s;
-    -webkit-animation: cardenter .5s forwards;
+    -webkit-animation: cardenter 0.1s forwards;
+    animation: cardenter false forwards;
     z-index: 1;
     height: 100%;
     position: absolute;
-    width: 100%; }
-  /* line 166, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    width: 100%;
+    animation-name: cardenter;
+    animation-fill-mode: forwards; }
+  /* line 171, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .back {
     z-index: 3;
     width: 100%;
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%; }
-    /* line 172, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 177, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .card .back:hover {
       cursor: pointer; }
 
-/* line 178, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 183, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .flipit {
   transform: rotatey(-180deg);
   -webkit-transform: rotatey(-180deg);
@@ -126,21 +120,16 @@ body {
   -o-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
-  transition: 0.5s;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -o-transition: 0.5s;
-  animation: cardenter .5s;
+  animation: cardenter .5s forwards;
   -webkit-animation: cardenter .5s; }
 
-/* line 190, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 195, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .front > p {
   padding: auto;
   margin: auto;
-  font: 80px/160px Georgia, Times New Roman, serif;
-  z-index: 20; }
+  font: 80px/160px Georgia, Times New Roman, serif; }
 
-/* line 210, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 214, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .page-header {
   margin: 0;
   margin-bottom: 10px;
@@ -149,12 +138,12 @@ body {
   padding-top: 10px;
   height: 5em;
   box-shadow: 1px 1px 2px black; }
-  /* line 219, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 223, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .page-header h1 {
     margin: 0;
     padding: 0; }
 
-/* line 225, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 229, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #button-group {
   min-width: 130px;
   position: fixed;
@@ -163,12 +152,12 @@ body {
   left: auto;
   z-index: 30; }
 
-/* line 234, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 238, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .score-text {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: #e60a0a; }
 
-/* line 239, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 243, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #custom-button {
   border-radius: 3px;
   border: 1px solid transparent;
@@ -176,10 +165,10 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100px; }
-  /* line 246, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 250, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:disabled {
     opacity: .4; }
-  /* line 249, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 253, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:hover {
     transition: 0.4s;
     -webkit-transition: 0.4s;
@@ -188,7 +177,7 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.5); }
 
 /* SIDE NAV */
-/* line 257, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 261, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .sidenav-button-a {
   background: rgba(0, 0, 255, 0.5);
   border-top-right-radius: 5px;
@@ -236,7 +225,7 @@ body {
   to {
     visibility: visible; } }
 
-/* line 317, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 321, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper {
   position: fixed;
   height: 30px;
@@ -245,7 +234,7 @@ body {
   transition: 2s ease-out;
   z-index: 500;
   text-align: center; }
-  /* line 326, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 330, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu {
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-top-right-radius: 5px;
@@ -255,17 +244,17 @@ body {
     animation-name: slideOut;
     animation-duration: 1s;
     animation-fill-mode: forwards; }
-    /* line 332, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 336, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper .nav-menu .menu-items {
       animation-name: showItems;
       animation-delay: .9s;
       animation-duration: .1s;
       animation-fill-mode: forwards; }
-      /* line 338, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      /* line 342, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
       .nav-wrapper .nav-menu .menu-items ol {
         list-style-position: inside;
         padding: 5px; }
-  /* line 345, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 349, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu-closed {
     background: rgba(244, 167, 66, 0.8);
     animation-name: slideIn;
@@ -275,18 +264,18 @@ body {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 2px; }
-  /* line 353, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 357, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .menu-items {
     visibility: hidden; }
 
 /* CARD IMAGES */
-/* line 360, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 364, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-wrapper {
   width: 213px;
   height: 268px;
   display: inline-block; }
 
-/* line 367, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 371, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -298,14 +287,14 @@ body {
   transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 379, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 383, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread {
   margin-top: 20px;
   width: 250px;
   height: 250px;
   position: relative; }
 
-/* line 386, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 390, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -316,7 +305,7 @@ body {
   -ms-transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 399, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 403, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(1) {
   right: 100px;
   top: 10px;
@@ -327,7 +316,7 @@ body {
   transform: rotate(-30deg);
   transition: .5s; }
 
-/* line 413, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 417, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2) {
   left: 50px;
   -webkit-transform: rotate(10deg);
@@ -337,7 +326,7 @@ body {
   transform: rotate(10deg);
   transition: .5s; }
 
-/* line 424, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 428, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2):last-child {
   left: 100px;
   -webkit-transform: rotate(30deg);
@@ -347,7 +336,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 434, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 438, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(3) {
   left: 200px;
   top: 10px;
@@ -358,7 +347,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 445, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 449, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(4) {
   left: 80px;
   top: 20px;
@@ -369,7 +358,7 @@ body {
   transform: rotate(50deg);
   transition: .5s; }
 
-/* line 456, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 460, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(5) {
   left: 100px;
   top: 30px;
@@ -380,47 +369,47 @@ body {
   transform: rotate(70deg);
   transition: .5s; }
 
-/* line 501, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 505, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card .fanned {
   -webkit-box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4); }
 
-/* line 506, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 510, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: #00a651; }
 
-/* line 530, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 534, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitdiamonds:before, .suitdiamonds:after {
   content: "♦";
   color: #ff0000;
   position: absolute; }
 
-/* line 536, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 540, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suithearts:before, .suithearts:after {
   content: "♥";
   color: #ff0000;
   position: absolute; }
 
-/* line 542, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 546, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitclubs:before, .suitclubs:after {
   content: "♣";
   color: #000;
   position: absolute; }
 
-/* line 548, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 552, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitspades:before, .suitspades:after {
   content: "♠";
   color: #000;
   position: absolute; }
 
-/* line 554, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 558, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:before {
   position: absolute;
   font-size: 35px;
   left: 5px;
   top: 5px; }
 
-/* line 561, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 565, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:after {
   position: absolute;
   font-size: 35px;
