--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,18 +29,21 @@
     display: block; }
   /* line 88, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .react-logo {
-    display: none; } }
+    display: none; }
+  /* line 91, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .player-one {
+    margin-top: 30px; } }
 
-/* line 93, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 96, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); }
 
-/* line 97, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 100, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .test-wrapper {
   transform: translate(0, 0);
   -webkit-transform: translate(0, 0); }
 
-/* line 102, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 105, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .react-logo {
   animation: react-logo-spin infinite 15s linear;
   height: 50px;
@@ -48,7 +51,7 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 110, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 113, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .touch {
   height: 37px;
   margin: auto;
@@ -56,14 +59,14 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 118, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 121, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-container {
   display: flex;
   -webkit-display: flex;
   flex-wrap: wrap;
   -webkit-flex-wrap: wrap; }
 
-/* line 125, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 128, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card {
   margin-bottom: 10px;
   position: relative;
@@ -75,7 +78,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
-  /* line 137, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 140, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front, .card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -88,7 +91,7 @@ body {
     -webkit-display: flex;
     align-content: space-around;
     justify-content: center; }
-  /* line 148, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 151, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front {
     transform: rotatey(-180deg);
     -webkit-transform: rotatey(-180deg);
@@ -103,18 +106,18 @@ body {
     width: 100%;
     animation-name: cardenter;
     animation-fill-mode: forwards; }
-  /* line 160, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 163, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .back {
     z-index: 3;
     width: 100%;
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%; }
-    /* line 166, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 169, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .card .back:hover {
       cursor: pointer; }
 
-/* line 172, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 175, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .flipit {
   transform: rotatey(-180deg);
   -webkit-transform: rotatey(-180deg);
@@ -129,14 +132,14 @@ body {
   animation: cardenter .5s;
   -webkit-animation: cardenter .5s; }
 
-/* line 179, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 182, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .front > p {
   padding: auto;
   margin: auto;
   font: 80px/160px Georgia, Times New Roman, serif;
   position: absolute; }
 
-/* line 198, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 201, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .page-header {
   margin: 0;
   margin-bottom: 10px;
@@ -145,12 +148,12 @@ body {
   padding-top: 10px;
   height: 5em;
   box-shadow: 1px 1px 2px black; }
-  /* line 207, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 210, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .page-header h1 {
     margin: 0;
     padding: 0; }
 
-/* line 213, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 216, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #button-group {
   min-width: 130px;
   position: fixed;
@@ -159,12 +162,12 @@ body {
   left: auto;
   z-index: 30; }
 
-/* line 222, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 225, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .score-text {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: #e60a0a; }
 
-/* line 227, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 230, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #custom-button {
   border-radius: 3px;
   border: 1px solid transparent;
@@ -172,10 +175,10 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100px; }
-  /* line 234, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 237, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:disabled {
     opacity: .4; }
-  /* line 237, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 240, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:hover {
     transition: 0.4s;
     -webkit-transition: 0.4s;
@@ -184,7 +187,7 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.5); }
 
 /* SIDE NAV */
-/* line 245, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 248, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .sidenav-button-a {
   background: rgba(0, 0, 255, 0.5);
   border-top-right-radius: 5px;
@@ -232,7 +235,7 @@ body {
   to {
     visibility: visible; } }
 
-/* line 305, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 308, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper {
   position: fixed;
   height: 30px;
@@ -241,7 +244,7 @@ body {
   transition: 2s ease-out;
   z-index: 500;
   text-align: center; }
-  /* line 314, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 317, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu {
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-top-right-radius: 5px;
@@ -251,17 +254,17 @@ body {
     animation-name: slideOut;
     animation-duration: 1s;
     animation-fill-mode: forwards; }
-    /* line 320, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 323, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper .nav-menu .menu-items {
       animation-name: showItems;
       animation-delay: .9s;
       animation-duration: .1s;
       animation-fill-mode: forwards; }
-      /* line 326, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      /* line 329, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
       .nav-wrapper .nav-menu .menu-items ol {
         list-style-position: inside;
         padding: 5px; }
-  /* line 333, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 336, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu-closed {
     background: rgba(244, 167, 66, 0.8);
     animation-name: slideIn;
@@ -271,18 +274,18 @@ body {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 2px; }
-  /* line 341, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 344, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .menu-items {
     visibility: hidden; }
 
 /* CARD IMAGES */
-/* line 348, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 351, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-wrapper {
   width: 213px;
   height: 268px;
   display: inline-block; }
 
-/* line 355, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 358, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -294,14 +297,14 @@ body {
   transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 367, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 370, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread {
   margin-top: 20px;
   width: 250px;
   height: 250px;
   position: relative; }
 
-/* line 374, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 377, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -312,7 +315,7 @@ body {
   -ms-transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 387, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 390, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(1) {
   right: 100px;
   top: 10px;
@@ -323,7 +326,7 @@ body {
   transform: rotate(-30deg);
   transition: .5s; }
 
-/* line 401, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 404, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2) {
   left: 50px;
   -webkit-transform: rotate(10deg);
@@ -333,7 +336,7 @@ body {
   transform: rotate(10deg);
   transition: .5s; }
 
-/* line 412, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 415, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2):last-child {
   left: 100px;
   -webkit-transform: rotate(30deg);
@@ -343,7 +346,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 422, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 425, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(3) {
   left: 200px;
   top: 10px;
@@ -354,7 +357,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 433, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 436, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(4) {
   left: 80px;
   top: 20px;
@@ -365,7 +368,7 @@ body {
   transform: rotate(50deg);
   transition: .5s; }
 
-/* line 444, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 447, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(5) {
   left: 100px;
   top: 30px;
@@ -376,49 +379,74 @@ body {
   transform: rotate(70deg);
   transition: .5s; }
 
-/* line 489, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 492, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card .fanned {
   -webkit-box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4); }
 
-/* line 494, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 497, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: #00a651; }
 
-/* line 518, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 521, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitdiamonds:before, .suitdiamonds:after {
   content: "♦";
   color: #ff0000;
   position: absolute; }
 
-/* line 524, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 527, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suithearts:before, .suithearts:after {
   content: "♥";
   color: #ff0000;
   position: absolute; }
 
-/* line 530, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 533, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitclubs:before, .suitclubs:after {
   content: "♣";
   color: #000;
   position: absolute; }
 
-/* line 536, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 539, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitspades:before, .suitspades:after {
   content: "♠";
   color: #000;
   position: absolute; }
 
-/* line 542, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 545, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:before {
   position: absolute;
   font-size: 35px;
   left: 5px;
   top: 5px; }
 
-/* line 549, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 552, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:after {
   position: absolute;
   font-size: 35px;
   right: 5px;
   bottom: 5px; }
+
+@keyframes winner {
+  from {
+    color: white;
+    text-shadow: 2px 2px rgba(51, 102, 255, 0.4); }
+  to {
+    color: green;
+    text-shadow: 2px 2px rgba(51, 102, 255, 0.4); } }
+
+@keyframes loser {
+  0% {
+    color: black; }
+  50% {
+    color: red; }
+  100% {
+    color: black; } }
+
+/* line 584, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.winner {
+  animation: winner .2s;
+  animation-iteration-count: 5; }
+
+/* line 589, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.loser {
+  animation: loser 2s ease-in; }
