--- a/src/css/main.css
+++ b/src/css/main.css
@@ -450,3 +450,30 @@ div[class*='suit']:after {
 /* line 589, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .loser {
   animation: loser 2s; }
+
+/* NAVBAR */
+/* line 596, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+#nav-wrapper-top {
+  width: 100%;
+  float: left;
+  margin: 0 0 3em 0;
+  padding: 0;
+  list-style: none;
+  background-color: #f2f2f2;
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc; }
+  /* line 606, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  #nav-wrapper-top li {
+    float: left; }
+    /* line 609, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    #nav-wrapper-top li a {
+      display: block;
+      padding: 8px 15px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #069;
+      border-right: 1px solid #ccc; }
+      /* line 617, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      #nav-wrapper-top li a:hover {
+        color: #c00;
+        background-color: #fff; }
