--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -591,11 +591,36 @@ div[class*='suit']:after {
 }	
 
 
+/* NAVBAR */
 
+#nav-wrapper-top {
+	width: 100%;
+	float: left;
+	margin: 0 0 3em 0;
+	padding: 0;
+	list-style: none;
+	background-color: #f2f2f2;
+	border-bottom: 1px solid #ccc; 
+	border-top: 1px solid #ccc; 
 
+	li {
+		float: left; 
 
+		a {
+			display: block;
+			padding: 8px 15px;
+			text-decoration: none;
+			font-weight: bold;
+			color: #069;
+			border-right: 1px solid #ccc; 
 
-
+			&:hover {
+				color: #c00;
+				background-color: #fff; 
+			}
+		}
+	}
+}
 
 
 
